--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,11 +5,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Gestion des commandes - Identification</title>
-    <link type="text/css" rel="stylesheet" media="screen" href="{{ MEDIA_URL }}css/login.css" />
-    <link type="text/css" rel="stylesheet" media="screen" href="{{ MEDIA_URL }}css/form.css" />
-    <link type="text/css" rel="stylesheet" media="screen" href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.8.custom.css" />
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.4.4.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.8.custom.min.js"></script>
+    <link rel="stylesheet" href="{{ MEDIA_URL }}css/login.css" type="text/css" />
+    <link rel="stylesheet" href="{{ MEDIA_URL }}css/form.css" type="text/css" />
+    <link rel="stylesheet" href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.10.custom.css" type="text/css" />
+    
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.5.1.min.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.10.custom.min.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.datepicker-fr.js"></script>
+    
     <script type="text/javascript" src="{{ MEDIA_URL }}js/base.js"></script>
 </head>
 
