--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -73,7 +73,7 @@
             <td>{{ product.name }}</td>
             <td>{{ product.packaging }}</td>
             <td>{{ product.reference }}</td>
-            <td>{{ product.price }} €</td>
+            <td>{{ product.price }}&nbsp;€</td>
             <td>{{ product.offer_nb }}</td>
             <td>{{ product.nomenclature }}</td>
             <td>{{ product.last_change|date }}</td>
