--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -1,22 +1,24 @@
-{% extends "main_classic.html" %}
-{% load product_tags %}
+{% extends "main_custom.html" %}
+{% load filters %}
 
 {% block menu_product %}selected{% endblock %}
 
 {% block header %}Modification d'un produit{% endblock %}
 
-{% if product|is_in_charge:user %}
+{% if product|is_in_charge:user or user|is_admin %}
 {% block buttons %}
 <div class="btn_wrapper">
   <a href="{% url product_delete product.id %}" class="btn_big">
-    <img src="{{ MEDIA_URL }}img/icons/cross.png" />Supprimer
+    <img src="{{ MEDIA_URL }}img/icons/cross.png" />Supprimer ce produit
   </a>
 </div>
 {% endblock %}
 {% endif %}
 
 {% block content %}
-<form action="{% url product_item product.id %}" method="post">{% csrf_token %}
+<div id="content" style="min-height:0">
+  <div id="content_header"><h2>Modification d'un produit</h2></div>
+  <form action="{% url product_item product.id %}" method="post">{% csrf_token %}
     <input type="hidden" name="method" value="PUT" />
     <p class="instructions">
       <em>Les champs marqués d'une étoile sont obligatoires</em>
@@ -24,6 +26,7 @@
     {% for field in form %}
         {% include "form_snippet.html"%}
     {% endfor %}
-    <button type="submit" class="button">Valider</button>
-</form>
+    <button type="submit" class="check button">Valider</button>
+  </form>
+</div>
 {% endblock %}
