--- a/templates/member/item.html
+++ b/templates/member/item.html
@@ -13,6 +13,6 @@
     {% for field in form %}
         {% include "form_snippet.html"%}
     {% endfor %}
-    <button type="submit" class="button">Valider</button>
+    <button type="submit" class="check button">Valider</button>
 </form>
 {% endblock %}
